crates/toml/tests/snapshots/invalid/key/partial-quoted.stderr
TOML parse error at line 1, column 1
  |
1 | partial"quoted" = 5
  | ^
invalid basic string, expected `"`

---
TOML parse error at line 1, column 8
  |
1 | partial"quoted" = 5
  |        ^
invalid basic string, expected non-double-quote visible characters, `\`
